--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">PalestinePlaces</string>
     <string name="title_activity_maps">Map</string>
-    <string name="title_activity_maps2">Map</string>
+    <string name="title_activity_maps2">Palestine Map</string>
+    <string name="show_all_locations">Show All Locations</string>
 </resources>
